# TwitchBuddy

./: .env.example  .gitignore  .pre-commit-config.yaml  DEV_RESUME.md  README.md  Specs.MD  TwitchBuddy.db  assets.db  cert.pem  clickhouse_ddls.md  key.pem  pyproject.toml  requirements-dev.txt  requirements.txt  run_alerts.py  triggers.db
.github/workflows/: ci.yml
scripts/: backup.ps1  check_twitch_creds.py  dump_dbs.py  generate_selfsigned_cert.py  run_oauth_redirect.py
src/twitchbuddy/: __init__.py  alert_store.py  alerts.py  asset_store.py  ch_logging.py  config.py  core.py  paths.py  py.typed  scheduler.py  stream_state.py  trigger_store.py  twitch_api.py  twitch_client.py
tests/: test_alert_store.py  test_alerts.py  test_alerts_admin.py  test_alerts_alerts_admin.py  test_alerts_assets_admin.py  test_asset_store.py  test_ch_logging.py  test_core.py  test_trigger_cache_lock.py  test_trigger_cache_refresh.py  test_trigger_store.py
web/static/: admin.html  admin.js  alert.html
